--- a/BlazorApp/BlazorApp.csproj
+++ b/BlazorApp/BlazorApp.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="*" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="*" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="*" />
   </ItemGroup>
 </Project>
