--- a/BlazorApp/appsettings.json
+++ b/BlazorApp/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "SQLConnectionString": "Server=localhost;Database=Employee;User Id=sa;Password=SqlServer@123;TrustServerCertificate=True"
+    "SQLConnectionString": "Server=localhost;Database=Employee;User Id=sa;Password=SqlServer@123;TrustServerCertificate=True",
+    "AccountConnectionString": "Server=localhost;Database=EmployeeIdentity;User Id=sa;Password=SqlServer@123;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
